--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -24,8 +24,28 @@ category: 'troubleshooting'
 
 ## Intro
 
-There are times when you are testing a page (or numerous pages) and you want to verify that it responded correctly. A great way to handle this is by checking the HTTP Status Code that the browser received. However this functionality is not available in Selenium WebDriver.
+There are times when you are testing a page (or numerous pages) and you want to verify that it responded correctly.
+A great way to handle this is by checking the HTTP Status Code that the browser received. However this functionality
+is not available in Selenium WebDriver.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
 
-<DropdownMarkdown folderName='17-retrieve-http-status-codes' />
+<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
