Switching tip 27 to use tabs

--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -21,8 +21,38 @@ category:
 
 ## Intro
 
-Compared to Unit and Integration Tests, Selenium is slow. A single test can easily take minutes to run. And when you have a lot of them, it can quickly compound your suite to take hours to complete (just for a single browser) -- hampering your ability to get fast feedback.
+Compared to Unit and Integration Tests, Selenium is slow. A single test can easily take minutes to run. And when you
+have a lot of them, it can quickly compound your suite to take hours to complete (just for a single browser) --
+hampering your ability to get fast feedback.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='27-parallel' />
+Rather than run your tests in series (which is what you get out of the box with Selenium) you can dramatically speed
+things up by running them in parallel. Couple this with
+[the ability to run your tests in any browser](https://elementalselenium.com/docs/cloud/26-cloud) and you're on to
+some solid footing with your test automation.
+
+But keep in mind that doing this requires some consideration into how you structure your tests, but the pay off is
+well worth the effort.
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"27-parallel"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
