Switching tip 29 to use tabs

--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Chrome Driver'
+title: 'ChromeDriver'
 id: 29-chrome-driver
 contentUrl: "tips/chrome-driver/29-chrome-driver"
-sidebar_label: Chrome Driver
+sidebar_label: ChromeDriver
 text: "It's straightforward to get your tests running locally against Firefox. But when you want to run them against a different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and lacking in code examples for getting started."
 number: 29
 hide_table_of_contents: true
@@ -24,10 +24,48 @@ category:
 
 ## Intro
 
-It's straightforward to get your tests running locally against Firefox. But when you want to run them against a different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and lacking in code examples for getting started.
+It's straightforward to get your tests running locally against Firefox. But when you want to run them against a
+different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and
+lacking in code examples for getting started.
 
-With the introduction of WebDriver (circa Selenium 2) a lot of benefits were realized (e.g. more effective & faster browser execution, no more single host origin issues, etc). But with it came some architectural & configuration differences that may not be widely known. Namely -- browser drivers.
+With the introduction of WebDriver (circa Selenium 2) a lot of benefits were realized (e.g. more effective &
+faster browser execution, no more single host origin issues, etc). But with it came some architectural & configuration
+differences that may not be widely known. Namely -- browser drivers.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='29-chrome-driver' />
+[WebDriver](https://www.selenium.dev/documentation/webdriver/) works with each of the major browsers through a browser driver which is (ideally) maintained by the
+browser manufacturer. It is an executable file (consider it a thin layer or a shim) that acts as a bridge between
+Selenium and the browser.
+
+[ChromeDriver](https://chromedriver.chromium.org/downloads) is Google Chrome's browser driver. In this specific use case is of using WebDriver with Chrome
+in testing locally.
+
+Let's step through an example using ChromeDriver ([download here](https://chromedriver.chromium.org/downloads)).
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Python', value: 'python' },
+    { label: 'C#', value: 'csharp' },
+    { label: 'Java', value: 'java' },
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"29-chrome-driver"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
