Switching tip 32 to use tabs

--- a/frontend/tips/32-css-vs-xpath/main.mdx
+++ b/frontend/tips/32-css-vs-xpath/main.mdx
@@ -38,6 +38,31 @@ the page (while CSS cannot).
 With such a divide, it can be hard to determine the best approach for you and your team. Especially when most
 of these claims are outdated.
 
-import DropdownMarkdown from '../../src/components/dropdownMarkdown';
+## A Solution
 
-<DropdownMarkdown folderName='32-css-vs-xpath' />
+Let's cut through the noise by running our own performance tests across all major browsers to see how CSS and
+XPath stack up and fall down. Then we will be able to determine a more helpful locator strategy.
+
+
+
+import DisplayTips from "../../src/components/displayTips";
+const contentLanguages = [
+    { label: 'Ruby', value: 'ruby' },
+];
+
+<DisplayTips contentPath={"32-css-vs-xpath"} languages={contentLanguages} />
+
+
+## About The Author
+
+Dave Haeffner is the original writer of Elemental Selenium -- a free, once weekly Selenium tip newsletter that's read
+by thousands of testing professionals. He also created and maintains the-internet (an open-source web app that's
+perfect for writing automated tests against).
+
+Dave has helped numerous companies successfully implement automated acceptance testing; including The Motley Fool,
+ManTech International, Sittercity, and Animoto. He is also an active member of the Selenium project and has spoken
+at numerous conferences and meetups around the world about automated acceptance testing.
+
+![Dave Haeffner profile picture](/img/authors/dave-haeffner.jpeg#author-img 'a title')
+
+
